# Clang-NES-Emu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
app/: CMakeLists.txt  main.c
cmake/: CompilerWarnings.cmake  Doxygen.cmake
doc/: 6502_INSTRUCTION_REF_KR.md  BUS.md  CPU.md  CPU_ADDRESSING_MODES_KR.md  Doxyfile.in  Input.md  MAPPER.md  PPU.md  Space.md  iNES_FORMAT_KR.md  컴퓨터구조.md
lib/: CMakeLists.txt
shell/: build.sh  clean.sh  configure.sh  docs.sh  env.sh  run.sh  test.sh
src/: CMakeLists.txt
src/apu/: CMakeLists.txt  apu.c  apu.h
src/bus/: CMakeLists.txt  bus.c  bus.h
src/common/: CMakeLists.txt  log.c  log.h  types.h
src/cpu/: CMakeLists.txt  cpu.c  cpu.h  opcode.c  opcode.h
src/emulator/: CMakeLists.txt  emulator.c  emulator.h
src/input/: CMakeLists.txt  input.c  input.h
src/mapper/: CMakeLists.txt  mapper.c  mapper.h  mapper_000.c
src/platform/: CMakeLists.txt  platform.c  platform.h
src/ppu/: CMakeLists.txt  ppu.c  ppu.h
src/ppu_bus/: CMakeLists.txt  ppu_bus.c  ppu_bus.h
src/rom/: CMakeLists.txt  rom.c  rom.h
test/: CMakeLists.txt  test_cpu.c
test/diagnostics/: CMakeLists.txt  check_platform.c  check_structs.c
